--- a/samples/BasicSample/vc2012/BasicSample.vcxproj.filters
+++ b/samples/BasicSample/vc2012/BasicSample.vcxproj.filters
@@ -1,4 +1,3 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source Files">
@@ -13,17 +12,14 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav</Extensions>
     </Filter>
-    <Filter Include="blocks">
-      <UniqueIdentifier>{9f2b91b9-ebbc-45ce-b149-ae1e85c27d25}</UniqueIdentifier>
+    <Filter Include="Blocks">
+      <UniqueIdentifier>{8E623347-6CFD-4DE7-ABE1-A55AAC3F5ACB}</UniqueIdentifier>
     </Filter>
-    <Filter Include="blocks\Panels">
-      <UniqueIdentifier>{8d980169-a6d7-44a2-b2f3-c4723492b2f8}</UniqueIdentifier>
+    <Filter Include="Blocks\PretzelGUI">
+      <UniqueIdentifier>{F0458DF7-1400-4642-958D-2E239471052E}</UniqueIdentifier>
     </Filter>
-    <Filter Include="blocks\Panels\BaseElements">
-      <UniqueIdentifier>{93d0c7d1-7ec8-42e2-bae9-a26317ddc6c1}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="blocks\Panels\Components">
-      <UniqueIdentifier>{bf321c87-2e88-44d7-8f25-f9a3fb170c73}</UniqueIdentifier>
+    <Filter Include="Blocks\PretzelGUI\src">
+      <UniqueIdentifier>{C923CD6A-CE31-40F3-B9CC-94392A6ADFCC}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -36,64 +32,64 @@
     <ClInclude Include="..\include\Resources.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClCompile Include="..\..\..\src\BasePanel.cpp">
-      <Filter>blocks\Panels\BaseElements</Filter>
+    <ClCompile Include="..\blocks\PretzelGUI\src\BasePretzel.cpp">
+      <Filter>Blocks\PretzelGUI\src</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\PanelGlobal.cpp">
-      <Filter>blocks\Panels\BaseElements</Filter>
+    <ClCompile Include="..\blocks\PretzelGUI\src\PretzelButton.cpp">
+      <Filter>Blocks\PretzelGUI\src</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\PanelGui.cpp">
-      <Filter>blocks\Panels\BaseElements</Filter>
+    <ClCompile Include="..\blocks\PretzelGUI\src\PretzelGlobal.cpp">
+      <Filter>Blocks\PretzelGUI\src</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\PanelRow.cpp">
-      <Filter>blocks\Panels\BaseElements</Filter>
+    <ClCompile Include="..\blocks\PretzelGUI\src\PretzelGui.cpp">
+      <Filter>Blocks\PretzelGUI\src</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\PanelLabel.cpp">
-      <Filter>blocks\Panels\Components</Filter>
+    <ClCompile Include="..\blocks\PretzelGUI\src\PretzelLabel.cpp">
+      <Filter>Blocks\PretzelGUI\src</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\PanelSlider.cpp">
-      <Filter>blocks\Panels\Components</Filter>
+    <ClCompile Include="..\blocks\PretzelGUI\src\PretzelRow.cpp">
+      <Filter>Blocks\PretzelGUI\src</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\PanelSaveLoad.cpp">
-      <Filter>blocks\Panels\Components</Filter>
+    <ClCompile Include="..\blocks\PretzelGUI\src\PretzelSaveLoad.cpp">
+      <Filter>Blocks\PretzelGUI\src</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\PanelButton.cpp">
-      <Filter>blocks\Panels\Components</Filter>
+    <ClCompile Include="..\blocks\PretzelGUI\src\PretzelSlider.cpp">
+      <Filter>Blocks\PretzelGUI\src</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\PanelToggle.cpp">
-      <Filter>blocks\Panels\Components</Filter>
+    <ClCompile Include="..\blocks\PretzelGUI\src\PretzelToggle.cpp">
+      <Filter>Blocks\PretzelGUI\src</Filter>
     </ClCompile>
+    <ClInclude Include="..\blocks\PretzelGUI\src\BasePretzel.h">
+      <Filter>Blocks\PretzelGUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\blocks\PretzelGUI\src\PretzelButton.h">
+      <Filter>Blocks\PretzelGUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\blocks\PretzelGUI\src\PretzelGlobal.h">
+      <Filter>Blocks\PretzelGUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\blocks\PretzelGUI\src\PretzelGui.h">
+      <Filter>Blocks\PretzelGUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\blocks\PretzelGUI\src\PretzelLabel.h">
+      <Filter>Blocks\PretzelGUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\blocks\PretzelGUI\src\PretzelRow.h">
+      <Filter>Blocks\PretzelGUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\blocks\PretzelGUI\src\PretzelSaveLoad.h">
+      <Filter>Blocks\PretzelGUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\blocks\PretzelGUI\src\PretzelSlider.h">
+      <Filter>Blocks\PretzelGUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\blocks\PretzelGUI\src\PretzelToggle.h">
+      <Filter>Blocks\PretzelGUI\src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Resources.h">
       <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\src\BasePanel.h">
-      <Filter>blocks\Panels\BaseElements</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\src\PanelGlobal.h">
-      <Filter>blocks\Panels\BaseElements</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\src\PanelGui.h">
-      <Filter>blocks\Panels\BaseElements</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\src\PanelRow.h">
-      <Filter>blocks\Panels\BaseElements</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\src\PanelLabel.h">
-      <Filter>blocks\Panels\Components</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\src\PanelSlider.h">
-      <Filter>blocks\Panels\Components</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\src\PanelSaveLoad.h">
-      <Filter>blocks\Panels\Components</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\src\PanelButton.h">
-      <Filter>blocks\Panels\Components</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\src\PanelToggle.h">
-      <Filter>blocks\Panels\Components</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
