--- a/samples/BasicSample/vc2012/BasicSample.vcxproj
+++ b/samples/BasicSample/vc2012/BasicSample.vcxproj
@@ -10,7 +10,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{1240D4B9-140F-4C96-9D4E-DF2CA549F880}</ProjectGuid>
+    <ProjectGuid>{4660A67F-F8C8-406C-AFFB-61B50B6E5584}</ProjectGuid>
     <RootNamespace>BasicSample</RootNamespace>
     <Keyword>Win32Proj</Keyword>
   </PropertyGroup>
@@ -49,7 +49,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\include;"..\..\..\..\..\\include";"..\..\..\..\..\\boost";..\blocks\PretzelGUI\src</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\include;"..\..\..\..\..\\include";"..\..\..\..\..\\boost";..\..\..\src</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;NOMINMAX;_WIN32_WINNT=0x0502;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -75,7 +75,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\include;"..\..\..\..\..\\include";"..\..\..\..\..\\boost";..\blocks\PretzelGUI\src</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\include;"..\..\..\..\..\\include";"..\..\..\..\..\\boost";..\..\..\src</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;NOMINMAX;_WIN32_WINNT=0x0502;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <PrecompiledHeader />
@@ -107,27 +107,27 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\BasicSampleApp.cpp" />
-    <ClCompile Include="..\blocks\PretzelGUI\src\BasePretzel.cpp" />
-    <ClCompile Include="..\blocks\PretzelGUI\src\PretzelButton.cpp" />
-    <ClCompile Include="..\blocks\PretzelGUI\src\PretzelGlobal.cpp" />
-    <ClCompile Include="..\blocks\PretzelGUI\src\PretzelGui.cpp" />
-    <ClCompile Include="..\blocks\PretzelGUI\src\PretzelLabel.cpp" />
-    <ClCompile Include="..\blocks\PretzelGUI\src\PretzelRow.cpp" />
-    <ClCompile Include="..\blocks\PretzelGUI\src\PretzelSaveLoad.cpp" />
-    <ClCompile Include="..\blocks\PretzelGUI\src\PretzelSlider.cpp" />
-    <ClCompile Include="..\blocks\PretzelGUI\src\PretzelToggle.cpp" />
+    <ClCompile Include="..\..\..\src\BasePretzel.cpp" />
+    <ClCompile Include="..\..\..\src\PretzelButton.cpp" />
+    <ClCompile Include="..\..\..\src\PretzelGlobal.cpp" />
+    <ClCompile Include="..\..\..\src\PretzelGui.cpp" />
+    <ClCompile Include="..\..\..\src\PretzelLabel.cpp" />
+    <ClCompile Include="..\..\..\src\PretzelRow.cpp" />
+    <ClCompile Include="..\..\..\src\PretzelSaveLoad.cpp" />
+    <ClCompile Include="..\..\..\src\PretzelSlider.cpp" />
+    <ClCompile Include="..\..\..\src\PretzelToggle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Resources.h" />
-    <ClInclude Include="..\blocks\PretzelGUI\src\BasePretzel.h" />
-    <ClInclude Include="..\blocks\PretzelGUI\src\PretzelButton.h" />
-    <ClInclude Include="..\blocks\PretzelGUI\src\PretzelGlobal.h" />
-    <ClInclude Include="..\blocks\PretzelGUI\src\PretzelGui.h" />
-    <ClInclude Include="..\blocks\PretzelGUI\src\PretzelLabel.h" />
-    <ClInclude Include="..\blocks\PretzelGUI\src\PretzelRow.h" />
-    <ClInclude Include="..\blocks\PretzelGUI\src\PretzelSaveLoad.h" />
-    <ClInclude Include="..\blocks\PretzelGUI\src\PretzelSlider.h" />
-    <ClInclude Include="..\blocks\PretzelGUI\src\PretzelToggle.h" />
+    <ClInclude Include="..\..\..\src\BasePretzel.h" />
+    <ClInclude Include="..\..\..\src\PretzelButton.h" />
+    <ClInclude Include="..\..\..\src\PretzelGlobal.h" />
+    <ClInclude Include="..\..\..\src\PretzelGui.h" />
+    <ClInclude Include="..\..\..\src\PretzelLabel.h" />
+    <ClInclude Include="..\..\..\src\PretzelRow.h" />
+    <ClInclude Include="..\..\..\src\PretzelSaveLoad.h" />
+    <ClInclude Include="..\..\..\src\PretzelSlider.h" />
+    <ClInclude Include="..\..\..\src\PretzelToggle.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
