--- a/samples/BasicSample/vc2012_cinder_dev/BasicSample.vcxproj
+++ b/samples/BasicSample/vc2012_cinder_dev/BasicSample.vcxproj
@@ -1,3 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -106,6 +107,7 @@
     <ResourceCompile Include="Resources.rc" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\src\PretzelTextField.cpp" />
     <ClCompile Include="..\src\BasicSampleApp.cpp" />
     <ClCompile Include="..\..\..\src\BasePretzel.cpp" />
     <ClCompile Include="..\..\..\src\PretzelButton.cpp" />
@@ -118,6 +120,7 @@
     <ClCompile Include="..\..\..\src\PretzelToggle.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\src\PretzelTextField.h" />
     <ClInclude Include="..\include\Resources.h" />
     <ClInclude Include="..\..\..\src\BasePretzel.h" />
     <ClInclude Include="..\..\..\src\PretzelButton.h" />
