--- a/samples/BasicSample/vc2012_cinder_dev/BasicSample.vcxproj.filters
+++ b/samples/BasicSample/vc2012_cinder_dev/BasicSample.vcxproj.filters
@@ -1,3 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source Files">
@@ -86,10 +87,16 @@
     <ClInclude Include="..\..\..\src\PretzelToggle.h">
       <Filter>Blocks\PretzelGUI\src</Filter>
     </ClInclude>
+    <ClCompile Include="..\..\..\src\PretzelTextField.cpp">
+      <Filter>Blocks\PretzelGUI\src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Resources.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\PretzelTextField.h">
+      <Filter>Blocks\PretzelGUI\src</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
