Added in custom cursors for MSW

--- a/samples/BasicSample/vc10/BasicSample.vcxproj
+++ b/samples/BasicSample/vc10/BasicSample.vcxproj
@@ -10,22 +10,18 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{4660A67F-F8C8-406C-AFFB-61B50B6E5584}</ProjectGuid>
+    <ProjectGuid>{6687782D-62BB-4D43-9406-45AA6C0CE2BA}</ProjectGuid>
     <RootNamespace>BasicSample</RootNamespace>
     <Keyword>Win32Proj</Keyword>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
     <WholeProgramOptimization>true</WholeProgramOptimization>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
@@ -50,7 +46,7 @@
     <ClCompile>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>..\include;"..\..\..\..\..\\include";"..\..\..\..\..\\boost";..\..\..\src</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;NOMINMAX;_WIN32_WINNT=0x0502;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;NOMINMAX;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -63,8 +59,8 @@
       <AdditionalIncludeDirectories>"..\..\..\..\..\\include";..\include</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>cinder-$(PlatformToolset)_d.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>"..\..\..\..\..\\lib\msw\$(PlatformTarget)"</AdditionalLibraryDirectories>
+      <AdditionalDependencies>cinder_d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>"..\..\..\..\..\\lib";"..\..\..\..\..\\lib\msw"</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
@@ -76,7 +72,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <AdditionalIncludeDirectories>..\include;"..\..\..\..\..\\include";"..\..\..\..\..\\boost";..\..\..\src</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;NOMINMAX;_WIN32_WINNT=0x0502;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;NOMINMAX;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <PrecompiledHeader />
       <WarningLevel>Level3</WarningLevel>
@@ -90,8 +86,8 @@
       <AdditionalIncludeDirectories>"..\..\..\..\..\\include";..\include</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>cinder-$(PlatformToolset).lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>"..\..\..\..\..\\lib\msw\$(PlatformTarget)"</AdditionalLibraryDirectories>
+      <AdditionalDependencies>cinder.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>"..\..\..\..\..\\lib";"..\..\..\..\..\\lib\msw"</AdditionalLibraryDirectories>
       <GenerateDebugInformation>false</GenerateDebugInformation>
       <GenerateMapFile>true</GenerateMapFile>
       <SubSystem>Windows</SubSystem>
@@ -107,27 +103,33 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\BasicSampleApp.cpp" />
-    <ClCompile Include="..\..\..\src\BasePretzel.cpp" />
-    <ClCompile Include="..\..\..\src\PretzelButton.cpp" />
-    <ClCompile Include="..\..\..\src\PretzelGlobal.cpp" />
-    <ClCompile Include="..\..\..\src\PretzelGui.cpp" />
-    <ClCompile Include="..\..\..\src\PretzelLabel.cpp" />
-    <ClCompile Include="..\..\..\src\PretzelRow.cpp" />
-    <ClCompile Include="..\..\..\src\PretzelSaveLoad.cpp" />
-    <ClCompile Include="..\..\..\src\PretzelSlider.cpp" />
-    <ClCompile Include="..\..\..\src\PretzelToggle.cpp" />
+    <ClCompile Include="..\..\..\src\pretzel\PretzelGui.cpp" />
+    <ClCompile Include="..\..\..\src\pretzel\PretzelGlobal.cpp" />
+    <ClCompile Include="..\..\..\src\modules\PretzelButton.cpp" />
+    <ClCompile Include="..\..\..\src\modules\PretzelColorPicker.cpp" />
+    <ClCompile Include="..\..\..\src\modules\PretzelLabel.cpp" />
+    <ClCompile Include="..\..\..\src\modules\PretzelSaveLoad.cpp" />
+    <ClCompile Include="..\..\..\src\modules\PretzelSlider.cpp" />
+    <ClCompile Include="..\..\..\src\modules\PretzelTextField.cpp" />
+    <ClCompile Include="..\..\..\src\modules\PretzelToggle.cpp" />
+    <ClCompile Include="..\..\..\src\components\BasePretzel.cpp" />
+    <ClCompile Include="..\..\..\src\components\PretzelRow.cpp" />
+    <ClCompile Include="..\..\..\src\components\ScrollPane.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Resources.h" />
-    <ClInclude Include="..\..\..\src\BasePretzel.h" />
-    <ClInclude Include="..\..\..\src\PretzelButton.h" />
-    <ClInclude Include="..\..\..\src\PretzelGlobal.h" />
-    <ClInclude Include="..\..\..\src\PretzelGui.h" />
-    <ClInclude Include="..\..\..\src\PretzelLabel.h" />
-    <ClInclude Include="..\..\..\src\PretzelRow.h" />
-    <ClInclude Include="..\..\..\src\PretzelSaveLoad.h" />
-    <ClInclude Include="..\..\..\src\PretzelSlider.h" />
-    <ClInclude Include="..\..\..\src\PretzelToggle.h" />
+    <ClInclude Include="..\..\..\src\pretzel\PretzelGlobal.h" />
+    <ClInclude Include="..\..\..\src\pretzel\PretzelGui.h" />
+    <ClInclude Include="..\..\..\src\modules\PretzelButton.h" />
+    <ClInclude Include="..\..\..\src\modules\PretzelColorPicker.h" />
+    <ClInclude Include="..\..\..\src\modules\PretzelLabel.h" />
+    <ClInclude Include="..\..\..\src\modules\PretzelSaveLoad.h" />
+    <ClInclude Include="..\..\..\src\modules\PretzelSlider.h" />
+    <ClInclude Include="..\..\..\src\modules\PretzelTextField.h" />
+    <ClInclude Include="..\..\..\src\modules\PretzelToggle.h" />
+    <ClInclude Include="..\..\..\src\components\BasePretzel.h" />
+    <ClInclude Include="..\..\..\src\components\PretzelRow.h" />
+    <ClInclude Include="..\..\..\src\components\ScrollPane.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
