--- a/samples/BasicSample/vc2013/BasicSample.vcxproj.filters
+++ b/samples/BasicSample/vc2013/BasicSample.vcxproj.filters
@@ -1,3 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source Files">
@@ -113,10 +114,16 @@
     <ClInclude Include="..\..\..\src\components\ScrollPane.h">
       <Filter>Blocks\PretzelGUI\src\components</Filter>
     </ClInclude>
+    <ClCompile Include="..\..\..\src\components\PretzelRoot.cpp">
+      <Filter>Blocks\PretzelGUI\src\components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Resources.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\components\PretzelRoot.h">
+      <Filter>Blocks\PretzelGUI\src\components</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
